apps/WebTs/overlays/dev/Ingress/webts-dev-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: webts-dev
spec:
  ingressClassName: nginx
  rules:
  - host: webts.dev.home.dblanchet.net
    http:
      paths:
      - backend:
          service:
            name: webts-web-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - webts.dev.home.dblanchet.net
    secretName: webts-web-dev-tls
